--- a/root/init.p350.rc
+++ b/root/init.p350.rc
@@ -5,13 +5,12 @@ on early-init
   mkdir /system
   mkdir /data 0771 system system
   mkdir /cache 0771 system cache
-  mkdir /mnt/sdcard 0000 system system
   mkdir /sd-ext 0771 system system
 
-  mkdir /storage 0775 system sdcard_r
-  mkdir /storage/sdcard0 0000 system system
-  symlink /storage/sdcard0 /mnt/sdcard
-  symlink /storage/sdcard0 /sdcard
+    mkdir /storage 0050 system sdcard_r
+    mkdir /storage/sdcard0 0000 system system
+    symlink /storage/sdcard0 /mnt/sdcard
+    symlink /storage/sdcard0 /sdcard
 
 
 on init
@@ -138,10 +137,15 @@ on boot
   chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
   write /sys/class/rfkill/rfkill0/state 0
 
-  # allow interfaces to get IPv6 address when tethering is enabled
+    #To allow interfaces to get v6 address when tethering is enabled
     write /proc/sys/net/ipv6/conf/rmnet0/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet1/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet2/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet3/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet4/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet5/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet6/accept_ra 2
+    write /proc/sys/net/ipv6/conf/rmnet7/accept_ra 2
 
 # Fast dormancy
   setprop ro.ril.fast.dormancy.rule 1
